--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/app.ts",
-    "start": "node ./dist/app.js",
+    "dev": "nodemon --exec ts-node --esm  src/app.ts",
+    "start": "node dist/app.js",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.9.4",
     "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ts-node": "^10.9.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
