--- a/package.json
+++ b/package.json
@@ -15,12 +15,21 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.4",
+    "@types/sharp": "^0.32.0",
+    "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "http-errors": "^2.0.0",
+    "imagekit": "^4.1.4",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.1",
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.1"
   }
 }
