--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/mailgen": "^2.0.7",
     "@types/node": "^20.9.4",
     "@types/sharp": "^0.32.0",
     "@types/uuid": "^9.0.7",
@@ -22,12 +25,15 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@types/mongoose": "^5.11.97",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "imagekit": "^4.1.4",
     "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.28",
     "mongoose": "^8.0.1",
     "sharp": "^0.32.6",
     "uuid": "^9.0.1"
