--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mailgen": "^2.0.7",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.9.4",
     "@types/sharp": "^0.32.0",
     "@types/uuid": "^9.0.7",
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.28",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.6",
     "uuid": "^9.0.1"
   }
