--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/mailgen": "^2.0.7",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.9.4",
+    "@types/nodemailer": "^6.4.14",
     "@types/sharp": "^0.32.0",
     "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.1",
@@ -37,6 +38,7 @@
     "mailgen": "^2.0.28",
     "mongoose": "^8.0.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "sharp": "^0.32.6",
     "uuid": "^9.0.1"
   }
